--- a/package.json
+++ b/package.json
@@ -2,23 +2,26 @@
   "name": "compliance-doc-mgmt-api",
   "version": "1.0.0",
   "private": true,
+  "description": "Cirkularity API (Modules 1.0 + 2.0)",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "echo \"No tests yet\" && exit 0"
   },
   "engines": {
     "node": ">=18"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "multer": "^1.4.5-lts.1",
-    "mssql": "^10.0.1",
-    "dotenv": "^16.4.5",
-    "axios": "^1.7.4",
-    "@azure/storage-blob": "^12.16.0",
     "@azure/openai": "^1.0.0-beta.12",
-    "@azure/search-documents": "^12.0.0",
-    "applicationinsights": "^2.9.5"
+    "@azure/search-documents": "^12.1.0",
+    "@azure/storage-blob": "^12.28.0",
+    "@azure/storage-queue": "^12.27.0",
+    "axios": "^1.12.1",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
+    "express": "^5.1.0",
+    "mssql": "^11.0.1",
+    "multer": "^2.0.2",
+    "uuid": "^11.1.0"
   }
 }
